--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       POSTGRES_HOST: hub-db
     env_file:
       - secrets/postgres.env
-      - secrets/oauth.env
+      # - secrets/oauth.env
     command: >
       jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
 
